Change tooltip name, rewrite context menu event

--- a/css/afunc.css
+++ b/css/afunc.css
@@ -24,5 +24,5 @@
 	20% {transform:scale(1.2)}
 	100% {opacity:0;transform:scale(0)}
 }
-.afunc-dom.afunc-off.modal-2LIEKY .directionRowReverse-2eZTxP .button-2t3of8+.button-2t3of8 {margin-left:10px;}
+.afunc-dom.afunc-off.modal-2LIEKY .directionRowReverse-2eZTxP .button-2t3of8 {margin-left:10px;}
 .afunc-dom .channel-notice[style] {background-size: 95px;background-position: center 10%;}
